--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Creación de una API con Express y MySQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "dev:2": "node --watch index.js"
   },
   "author": "Sergio Vélez Díaz",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.2",
+    "nodemon": "^3.0.1",
     "zod": "^3.22.4"
   }
 }
