--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=3000
-DB_HOST="127.0.0.1"
-DB_USER="root"
-DB_PASSWORD="29481504N"
-DB_PORT=3306
-DB_NAME="blog"
+PRIVATE_PORT=3000
+PRIVATE_DB_HOST="127.0.0.1"
+PRIVATE_DB_USER="root"
+PRIVATE_DB_PASSWORD="29481504N"
+PRIVATE_DB_PORT=3306
+PRIVATE_DB_NAME="blog"
