--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PRIVATE_PORT=3000
-PRIVATE_DB_HOST="127.0.0.1"
-PRIVATE_DB_USER="root"
-PRIVATE_DB_PASSWORD="29481504N"
-PRIVATE_DB_PORT=3306
-PRIVATE_DB_NAME="blog"
+SECRET_PORT=3000
+SECRET_DB_HOST="127.0.0.1"
+SECRET_DB_USER="root"
+SECRET_DB_PASSWORD="29481504N"
+SECRET_DB_PORT=3306
+SECRET_DB_NAME="blog"
