--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SECRET_PORT=3000
-SECRET_DB_HOST="127.0.0.1"
-SECRET_DB_USER="root"
-SECRET_DB_PASSWORD="29481504N"
-SECRET_DB_PORT=3306
-SECRET_DB_NAME="blog"
+PORT=3000
+DB_HOST="127.0.0.1"
+DB_USER="root"
+DB_PASSWORD="29481504N"
+DB_PORT=3306
+DB_NAME="blog"
